ispCP ω 1.0.6 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-04-02 Laurent Declercq
	- Dists:
		* [Debian Squeeze] Updated packages file
		* Fixed #2314: [FreeBSD] Changed BSDMakefile, postinst and INSTALL
		* Fixed #2315: [FreeBSD] Patch ispcpphptemp.sh during postinst
		* Fixed #2316: [FreeBSD] Crontab corrected
		* Fixed #2317: [FreeBSD] Typo in ProFTPd BSDmakefile
		* Fixed #2318: [FreeBSD] Correct Path & Filename ispcp.conf
	- GUI:
		* Fixed (AGAIN) #2313: Adding hosting plan is broken

2010-04-01 Laurent Declercq
	- DISTS:
		* [FreeBSD] Removed useless statement in the main BSDmakefile file
	- GUI:
		* Fixed #2313: Adding hosting plan is broken
	- ENGINE:
		* Added conditional statement to retrieve the ispcp.conf path

2010-03-31 Jochen Manz
	- RELEASE ispCP ω Omega 1.0.5
	- CONFIGS:
		* Updated the BuildDate for every distributions

2010-03-31 Benedikt Heintel
	- CONFIGS:
		* Fixed #2312: [FreeBSD] Small improvment to INSTALL File

2010-03-31 Laurent Declercq
	- DISTS:
		* [FreeBSD] Fixed: Unable to hide `rkhunter` output with common 
			I/O redirections in the `postinst` script
		* [FreeBSD] The make process must copy the files in `/tmp` by default
		* [FreeBSD] Removed useless code and some other changes in the `postinst`
			script
		* [FreeBSD] Fixed #2311: Add "screen" to Packages list
		* [FreeBSD] Fixed #2309: Updated INSTALL File
		* [FreeBSD] Fixed: Bind don't start automatically
		* [OpenSuse] /etc/apache2/sysconfig.d/include.conf not created by
			/usr/sbin/httpd2
	- SETUP:
		* Fixed: '/usr/local/etc/postfix/ispcp/{aliases,domains,mailboxes,
			transport,sender-access}: No such file or directory' (On freeBSD)
		* Make some I/O redirections FreeBSD compatible

2010-03-30 Laurent Declercq
	- DISTS:
		* [FreeBSD] Added post installation script (Thank to Bene)
		* [FreeBSD] Missing instructions in the postfix/BSDmakefile file
		* [FreeBSD] Fixed: Wrong php cli binary path
		* [FreeBSD] Fixed: open_basedir restriction in effect (GUI)