@@ -697,7 +697,7 @@ sub update_database_schema {
 
 	$cmd = "
 		$main::cfg{'CMD_PHP'} $main::cfg{'ROOT_DIR'}/engine/setup/updDB.php " .
-		"&>/tmp/ispcp-update-database.log";
+		">> /tmp/ispcp-update-database.log 2>&1";
 
 	$rs = sys_command_rs($cmd);
 	return $rs if($rs !=0);
@@ -831,7 +831,7 @@ sub rebuild_customers_cfg {
 
 	$rs = sys_command_rs(
 		"perl $main::cfg{'ROOT_DIR'}/engine/ispcp-rqst-mngr " .
-		"&>/tmp/ispcp-update-customers.log");
+		">> /tmp/ispcp-update-customers.log 2>&1");
 	return $rs if ($rs != 0);
 
 	push_el(\@main::el, 'rebuild_customers_cfg()', 'Ending...');
@@ -908,14 +908,14 @@ sub update_old_disabled_dmn_layout {
 		# recovery if the process fail
 		if(-e "$_/htdocs" && !-e "$_/htdocs.disabled") {
 			$rs = sys_command_rs(
-				"$main::cfg{'CMD_MV'} $_/htdocs $_/htdocs.disabled &> $log_file"
+				"$main::cfg{'CMD_MV'} $_/htdocs $_/htdocs.disabled >> $log_file 2>&1"
 			);
 			return $rs if($rs != 0);
 		}
 
 		# Copy the directory that contain the layout for disabled domains
 		$rs = sys_command_rs(
-			"$main::cfg{CMD_CP} -TRfp $dsd_dmn_skel_dir $_/htdocs &> $log_file"
+			"$main::cfg{CMD_CP} -TRfp $dsd_dmn_skel_dir $_/htdocs >> $log_file 2>&1"
 		);
 		return $rs if($rs != 0);
 
@@ -987,7 +987,7 @@ sub update_old_disabled_dmn_layout {
 		# To (eg /var/www/virtual/domain.tld)
 		if(m@(.*)\.disabled$@) {
 			$rs = sys_command_rs(
-				"$main::cfg{'CMD_MV'} $_ $1 &> $log_file"
+				"$main::cfg{'CMD_MV'} $_ $1 >> $log_file 2>&1"
 			);
 			return $rs if($rs != 0);
 		} else {
